Name:               mnogo
Version:            0.0.0
Synopsis:           MongoDB driver
Description:        MongoDB driver
License:            MIT
License-file:       LICENSE
Author:             Fedor Gogolev <knsd@knsd.net>
Maintainer:         Fedor Gogolev <knsd@knsd.net>
Homepage:           https://github.com/lambda-llama/mnogo
Bug-reports:        https://github.com/lambda-llama/mnogo
Category:           System
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.12
Tested-with:        GHC == 7.6.*

Library
    Hs-source-dirs:     src
    Ghc-options:        -Wall -fno-warn-orphans
    Default-language:   Haskell2010

    Build-depends:
        base                       >= 4.5.0 && <= 4.8
      , bresson                    == 0.0.*

    Exposed-modules:
        Database.Mongodb

Test-suite hen-tests
    Main-is:          Tests.hs
    Hs-source-dirs:   src, tests
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0

    Build-depends:
        base                       >= 4.5.0 && <= 4.8
      , bresson                    == 0.0.*

      , tasty                      == 0.3.*

Source-repository head
    Type:             git
    Location:         https://github.com/lambda-llama/mnogo
