Name:               mnogo
Version:            0.0.0
Synopsis:           MongoDB driver
Description:        MongoDB driver
License:            MIT
License-file:       LICENSE
Author:             Fedor Gogolev <knsd@knsd.net>
Maintainer:         Fedor Gogolev <knsd@knsd.net>
Homepage:           https://github.com/lambda-llama/mnogo
Bug-reports:        https://github.com/lambda-llama/mnogo
Category:           Database, Network
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.12
Tested-with:        GHC == 7.6.*

Library
    Hs-source-dirs:     src
    Ghc-options:        -Wall -fno-warn-orphans
    Default-language:   Haskell2010

    Build-depends:
        base                       >= 4.5.0 && <= 4.8
      , bytestring                 == 0.9.* || == 0.10.*
      , network                    == 2.4.*
      , mtl                        == 2.1.*
      , bresson                    == 0.0.*
      , exceptions                 == 0.3.*

    Exposed-modules:
        Database.Mongodb
        Database.Mongodb.Connection
    Other-modules:
        Database.Mongodb.Internal

Test-suite mnogo-tests
    Main-is:          Tests.hs
    Hs-source-dirs:   src, tests
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0

    Build-depends:
        base                       >= 4.5.0 && <= 4.8
      , bytestring                 == 0.9.* || == 0.10.*
      , network                    == 2.4.*
      , mtl                        == 2.1.*
      , bresson                    == 0.0.*
      , exceptions                 == 0.3.*

      , tasty                      == 0.3.*

Source-repository head
    Type:             git
    Location:         https://github.com/lambda-llama/mnogo
